# OpenGL

02_Shader_Examples/: CMakeLists.txt
02_Shader_Examples/build_02_Shader_Examples/: CMakeCache.txt  Makefile  cmake_install.cmake
02_Shader_Examples/inc/: shaderprogram.hpp
02_Shader_Examples/inc/glad/: glad.h
02_Shader_Examples/shaders/: simplefs.glsl  simplevs.glsl
02_Shader_Examples/src/: glad.c  main.cpp  shaderprogram.cpp
03_Keyboard_Kontrol/: CMakeLists.txt
03_Keyboard_Kontrol/build_03_Keyboard_Kontrol/: CMakeCache.txt  Makefile  cmake_install.cmake
03_Keyboard_Kontrol/inc/: shaderprogram.hpp
03_Keyboard_Kontrol/shaders/: simplefs.glsl
03_Keyboard_Kontrol/src/: main.cpp  shaderprogram.cpp
